--- a/jquery-1.html
+++ b/jquery-1.html
@@ -62,4 +62,18 @@ function undo () {
 };
 </script>
 
+<script>
+function highlightByline () {
+ $("byline").addClass("byline");
+ .highlight {
+    background: yellow;
+  }
+
+  function unHighlightByline () {
+    $("byline").addClass("byline");
+
+  }
+};
+</script>
+
 </html>
